pkg/kgateway/agentgatewaysyncer/testdata/outputs/direct-response/invalid-backendref-filter.status.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: default
spec: null
status:
  parents:
  - conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: 'failed to build backend destination: &{Accepted False IncompatibleFilters
        unsupported filter type "ExtensionRef"}'
      reason: BackendError
      status: "False"
      type: ResolvedRefs
    controllerName: agentgateway.dev/agentgateway
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: example-gateway
      namespace: default
---
