pkg/kgateway/agentgatewaysyncer/testdata/outputs/direct-response/invalid-backendref-filter.yaml
Addresses:
- service:
    hostname: httpbin.default.svc.cluster.local
    name: httpbin
    namespace: default
    ports:
    - servicePort: 8000
      targetPort: 80
Binds:
- key: 8080/default/example-gateway
  port: 8080
Listeners:
- bindKey: 8080/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
