pkg/kgateway/agentgatewaysyncer/testdata/outputs/direct-response/overlapping-filters-output.yaml
Binds:
- key: 8080/default/example-gateway
  port: 8080
Listeners:
- bindKey: 8080/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
